# rhi

./: .gitignore  CMakeLists.txt  LICENSE  engine.cap  engine.cpp  rhi.cap  rhi_test.cpp  stdafx.cpp  stdafx.h
data/: gen.comp  solid.frag  solid.frag.spv  solid.vert  solid.vert.spv
eng/: CMakeLists.txt  component.cpp  component.h  object.cpp  object.h  rendering.cpp  rendering.h  sys.cpp  sys.h  use_imgui.cpp  world.cpp  world.h
eng/render/: CMakeLists.txt  passes.cpp  passes.h  renderer.cpp  renderer.h  rendering.cpp  rendering.h  scene.cpp  scene.h
eng/ui/: CMakeLists.txt  imgui_ctx.cpp  imgui_ctx.h  properties.cpp  properties.h  ui.cpp  ui.h  use_imgui.h  window.cpp  window.h
rhi/: CMakeLists.txt  base.cpp  base.h  pass.cpp  pass.h  pipeline.cpp  pipeline.h  resource.cpp  resource.h  rhi.cpp  rhi.h  submit.cpp  submit.h
rhi/vk/: CMakeLists.txt  base_vk.cpp  base_vk.h  buffer_vk.cpp  buffer_vk.h  compute_pass_vk.cpp  compute_pass_vk.h  copy_pass_vk.cpp  copy_pass_vk.h  graphics_pass_vk.cpp  graphics_pass_vk.h  pipeline_vk.cpp  pipeline_vk.h  present_pass_vk.cpp  present_pass_vk.h  rhi_vk.cpp  rhi_vk.h  sampler_vk.cpp  sampler_vk.h  submit_vk.cpp  submit_vk.h  swapchain_vk.cpp  swapchain_vk.h  texture_vk.cpp  texture_vk.h
utl/: CMakeLists.txt  algo.cpp  algo.h  box_tree.cpp  box_tree.h  dbg.cpp  dbg.h  enumutl.cpp  enumutl.h  file.cpp  file.h  geom.cpp  geom.h  geom_primitive.cpp  geom_primitive.h  mathutl.cpp  mathutl.h  mem.cpp  mem.h  msg.cpp  msg.h  polytope.cpp  polytope.h  type_info.cpp  type_info.h  update_queue.cpp  update_queue.h  utl.cpp  utl.h
